# aa-rss-to-discord

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: automated-checks.yml  pypi-release.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: feature_request.md
aa_rss_to_discord/: __init__.py  admin.py  apps.py  auth_hooks.py  constants.py  managers.py  models.py  providers.py  tasks.py  utils.py
aa_rss_to_discord/discordbot/cogs/: __init__.py  rss.py
aa_rss_to_discord/locale/: django.pot
aa_rss_to_discord/locale/cs/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/de/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/es/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/it_IT/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/ja/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/nl/LC_MESSAGES/: django.po
aa_rss_to_discord/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/ru/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/sk/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/uk/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
aa_rss_to_discord/migrations/: 0001_initial.py  0002_enable_disable_rss_feeds.py
aa_rss_to_discord/providers/: applogger.py
aa_rss_to_discord/tests/: test_auth_hooks.py  test_managers.py  test_models.py  test_providers.py  test_tasks.py
testauth/: local.py  settings.py  settings_aa3x.py
testauth/settings/: local.py
testauth/settings/testing/: local.py
