[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-rss-to-discord"
version = "1.8.0"
description = "Alliance Auth module to post news from RSS feeds to your Discord"
readme = "README.md"
keywords = [
    "allianceauth",
    "discord",
    "eveonline",
    "rss",
]
license = {file = "LICENSE"}
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = "~=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3",
    "allianceauth-app-utils>=1.14.2",
    "allianceauth-discordbot>=3.0.5",
    "feedparser",
]
[project.urls]
Changelog = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/CHANGELOG.md"
Documentation = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/README.md"
Donations = "https://ko-fi.com/ppfeufer"
Homepage = "https://github.com/ppfeufer/aa-rss-to-discord"
Source = "https://github.com/ppfeufer/aa-rss-to-discord.git"
Tracker = "https://github.com/ppfeufer/aa-rss-to-discord/issues"

[tool.hatch.build]
include = [
    "/aa_rss_to_discord",
]
