[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-rss-to-discord"
description = "Alliance Auth module to post news from RSS feeds to your Discord"
readme = "README.md"
keywords = [
    "allianceauth",
    "discord",
    "eveonline",
    "rss",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.3.1,<5",
    "allianceauth-app-utils>=1.14.2",
    "allianceauth-discordbot>=3.0.5",
    "feedparser",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
urls.Changelog = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/README.md"
urls.Donations = "https://ko-fi.com/ppfeufer"
urls.Homepage = "https://github.com/ppfeufer/aa-rss-to-discord"
urls.Source = "https://github.com/ppfeufer/aa-rss-to-discord.git"
urls.Tracker = "https://github.com/ppfeufer/aa-rss-to-discord/issues"

[tool.hatch.build]
include = [
    "/aa_rss_to_discord",
]

[tool.hatch.version]
path = "aa_rss_to_discord/__init__.py"
