[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-rss-to-discord"
description = "Alliance Auth module to post news from RSS feeds to your Discord"
readme = "README.md"
keywords = [
    "allianceauth",
    "discord",
    "eveonline",
    "rss",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.3.1,<5",
    "allianceauth-discordbot>=3.0.5",
    "feedparser",
    "py-cord>=2.7.0rc2; python_version>='3.13'",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
urls.Changelog = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/CHANGELOG.md"
urls.Codecov = "https://codecov.io/gh/ppfeufer/aa-rss-to-discord"
urls.Discord = "https://discord.gg/fjnHAmk"
urls.Documentation = "https://github.com/ppfeufer/aa-rss-to-discord/blob/master/README.md"
urls.Donation = "https://ko-fi.com/ppfeufer"
urls.GitHub = "https://github.com/ppfeufer/aa-rss-to-discord"
urls.Tracker = "https://github.com/ppfeufer/aa-rss-to-discord/issues"
urls.Translation = "https://weblate.ppfeufer.de/projects/alliance-auth-apps/aa-rss-to-discord/"

[tool.hatch.build]
include = [
    "/aa_rss_to_discord",
]

[tool.hatch.version]
path = "aa_rss_to_discord/__init__.py"
