[metadata]
name = aa_rss_to_discord
version = attr: aa_rss_to_discord.__version__
description = Alliance Auth module to post news from RSS feeds to your Discord
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = develop@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = develop@ppfeufer.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/ppfeufer/aa-rss-to-discord
keywords =
    allianceauth
    eveonline
    discord
    rss
project_urls =
    Issue / Bug Reports = https://github.com/ppfeufer/aa-rss-to-discord/issues
    Changelog = https://github.com/ppfeufer/aa-rss-to-discord/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    allianceauth>=3.0.0
    allianceauth-app-utils>=1.14.2
    allianceauth-discordbot>=3.0.5
    feedparser
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = aa_rss_to_discord
